# rusty_spark_4

./: .gitignore  Cargo.toml
k3s/: kafka.yml  namespaces.yml  producer_job.yml
kafka_2_delta_consumer/src/: kafka.rs  main.rs
kafka_producer/: Cargo.toml  Dockerfile
kafka_producer/src/: main.rs
src/: delta.rs  main.rs
