[package]
name = "kafka_delta_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
deltalake = { version = "0.18.0", features = ["datafusion"] }
tokio = { version = "1.38.0", features = ["macros"] }
chrono = "0.4.38"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde_json = "1.0.117"
once_cell = "1.19.0"
jsonschema = { version = "0.18.0", features = ["draft202012"] }
