[package]
name = "kafka_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.36.2"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.117" }
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
rand = "0.9.0-alpha.1"
uuid = { version = "1.8.0", features = ["v4"] }
jsonschema = { version = "0.18.0", features = ["draft202012"] }
